# ocaml-platform-installer

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .ocamlformat  CHANGES.md  Changes.md  Dockerfile  LICENSE  README.md  dune-project  platform.opam  platform.opam.template
.github/workflows/: build.yaml  changelog-check.yml  pr-number.yml
doc/: embedding.md  spec.md  state.md
lib/: dune  import.mli  opam.ml  opam.mli  opam_installer.ml  opam_installer.mli  tools.ml  tools.mli
macos/: install.sh
src/bin-proxy/: bin_proxy.ml  dune  embed_ppx.ml  main.ml
src/distrib/: make_installer.sh  release.Dockerfile  release.Dockerfile.dockerignore  release.sh
src/lib/: ansi_box.ml  ansi_box.mli  binary_package.ml  binary_package.mli  binary_repo.ml  binary_repo.mli  cache.ml  cache.mli  dune  import.ml  import.mli  installed_repo.ml  installed_repo.mli  opam.ml  opam.mli  package.ml  package.mli  repo.ml  repo.mli  sandbox_compiler_package.ml  sandbox_compiler_package.mli  sandbox_switch.ml  sandbox_switch.mli  signal_stubs.c  tools.ml  tools.mli  userInteractions.ml  userInteractions.mli  user_interactions.ml
src/lib/binary_repo/: binary_package.ml  binary_package.mli  binary_repo.ml  binary_repo.mli  dune  package.ml  package.mli  repo.ml  repo.mli
test/: README.md  run_test.sh
test/dockerfiles/: Dockerfile.build  Dockerfile.continue-when-build-fails  Dockerfile.install  Dockerfile.install-in-small-project  Dockerfile.install-with-latest-opam  Dockerfile.migrate_01  Dockerfile.migrate_from_0  Dockerfile.migrate_from_1  Dockerfile.ocaml5  Dockerfile.ocamlformat  Dockerfile.ocamlformat_user_installed  Dockerfile.odoc  Dockerfile.pinned-compiler  Dockerfile.re-install-in-small-project  Dockerfile.reinstall_cached  Dockerfile.reinstall_ocamlformat  Dockerfile.release  Dockerfile.small-project  Dockerfile.version  Dockerfile.version_dependent
test/lib/: dune
test/tests/: build.sh  check_cache_is_empty.sh  failing_ocamlformat.sh  install-in-small-project.sh  install.sh  ocaml5.sh  ocamlformat.sh  ocamlformat_user_installed.sh  odoc.sh  pin-ocaml-compiler.sh  re-install-in-small-project.sh  reinstall_cached.sh  reinstall_ocamlformat.sh  release.sh  small-project.sh  switch-5.0.sh  version.sh  version_dependent.sh
